--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -17,7 +17,7 @@ ja:
     - 金
     - 土
     abbr_month_names:
-    -
+    - 
     - 1月
     - 2月
     - 3月
@@ -43,7 +43,7 @@ ja:
       long: "%Y年%m月%d日(%a)"
       short: "%m/%d"
     month_names:
-    -
+    - 
     - 1月
     - 2月
     - 3月
@@ -62,43 +62,19 @@ ja:
     - :day
   datetime:
     distance_in_words:
-      about_x_hours:
-        one: 約1時間
-        other: 約%{count}時間
-      about_x_months:
-        one: 約1ヶ月
-        other: 約%{count}ヶ月
-      about_x_years:
-        one: 約1年
-        other: 約%{count}年
-      almost_x_years:
-        one: 1年弱
-        other: "%{count}年弱"
+      about_x_hours: 約%{count}時間
+      about_x_months: 約%{count}ヶ月
+      about_x_years: 約%{count}年
+      almost_x_years: "%{count}年弱"
       half_a_minute: 30秒前後
-      less_than_x_seconds:
-        one: 1秒以内
-        other: "%{count}秒未満"
-      less_than_x_minutes:
-        one: 1分以内
-        other: "%{count}分未満"
-      over_x_years:
-        one: 1年以上
-        other: "%{count}年以上"
-      x_seconds:
-        one: 1秒
-        other: "%{count}秒"
-      x_minutes:
-        one: 1分
-        other: "%{count}分"
-      x_days:
-        one: 1日
-        other: "%{count}日"
-      x_months:
-        one: 1ヶ月
-        other: "%{count}ヶ月"
-      x_years:
-        one: 1年
-        other: "%{count}年"
+      less_than_x_seconds: "%{count}秒未満"
+      less_than_x_minutes: "%{count}分未満"
+      over_x_years: "%{count}年以上"
+      x_seconds: "%{count}秒"
+      x_minutes: "%{count}分"
+      x_days: "%{count}日"
+      x_months: "%{count}ヶ月"
+      x_years: "%{count}年"
     prompts:
       second: 秒
       minute: 分
@@ -118,6 +94,7 @@ ja:
       exclusion: は予約されています
       greater_than: は%{count}より大きい値にしてください
       greater_than_or_equal_to: は%{count}以上の値にしてください
+      in: は%{count}の範囲に含めてください
       inclusion: は一覧にありません
       invalid: は不正な値です
       less_than: は%{count}より小さい値にしてください
@@ -135,9 +112,7 @@ ja:
       wrong_length: は%{count}文字で入力してください
     template:
       body: 次の項目を確認してください
-      header:
-        one: "%{model}にエラーが発生しました"
-        other: "%{model}に%{count}個のエラーが発生しました"
+      header: "%{model}に%{count}個のエラーが発生しました"
   helpers:
     select:
       prompt: 選択してください
@@ -145,6 +120,7 @@ ja:
       create: 登録する
       submit: 保存する
       update: 更新する
+      delete: 削除する
   number:
     currency:
       format:
@@ -158,6 +134,7 @@ ja:
     format:
       delimiter: ","
       precision: 3
+      round_mode: default
       separator: "."
       significant: false
       strip_insignificant_zeros: false
@@ -216,13 +193,16 @@ ja:
       title_new: "%{name}の新規作成"
       title_edit: "%{name}の編集"
     pagination:
-      first: '最初'
-      last: '最後'
-      previous: '前'
-      next: '次'
-      truncate: '...'
+      first: "最初"
+      last: "最後"
+      previous: "« 前"
+      next: "次 »"
+      truncate: "..."
+  devise:
+    shared:
+      minimum_password_length: "%{count}文字以上"
   controllers:
     common:
-      notice_create: "%{name}が作成されました。"
-      notice_update: "%{name}が更新されました。"
-      notice_destroy: "%{name}が削除されました。"
+      notice_create: "%{name}を作成しました"
+      notice_update: "%{name}を編集しました"
+      notice_destroy: "%{name}を削除しました"
