--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -2,10 +2,26 @@ ja:
   activerecord:
     models:
       book: 本  #g
-
+      user: ユーザー  #g
     attributes:
       book:
         author: 著者  #g
         memo: メモ  #g
         picture: 画像  #g
         title: 題名  #g
+      user:
+        address: 住所  #g
+        email: Eメール  #g
+        encrypted_password: 暗号化パスワード  #g
+        postal_code: 郵便番号  #g
+        profile: プロフィール  #g
+        remember_created_at: ログイン記憶時刻  #g
+        reset_password_sent_at: パスワードリセット送信時刻  #g
+        reset_password_token: パスワードリセット用トークン  #g
+        sign_in_as: ログインユーザー
+        edit_profile: プロフィール編集
+        logout: ログアウト
+        user_list: ユーザーリスト
+        forgot_password: パスワードをお忘れですか？
+        login: ログイン
+        sign_up: アカウント登録
