--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -193,3 +193,9 @@ ja:
       notice_create: "%{name}が作成されました。"
       notice_update: "%{name}が更新されました。"
       notice_destroy: "%{name}が削除されました。"
+  book:
+    new_book: 新規作成
+    edit_book: 詳細編集
+    success: 登録しました
+    update: 更新しました
+    delete: 削除しました
