--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -218,6 +218,8 @@ ja:
       title_show: "%{name}の詳細"
       sign_out: ログアウト
       minimum_length: "%{length}文字以上"
+      following_list: フォロー一覧
+      followers_list: フォロワー一覧
     pagination:
       first: '最初'
       last: '最後'
