削除済みのユーザーのコメントの表示名を「退会済み」にする

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -236,6 +236,7 @@ ja:
       followers: "%{count} フォロワー"
       create: フォローする
       destroy: フォロー解除する
+      not_found: 退会済み
     followings:
       index:
         title: フォロー
